# backend/openapi.json
@@ -4747,6 +4747,16 @@
           },
           {
             "in": "query",
+            "name": "closed",
+            "schema": {
+              "default": -1,
+              "title": "Closed",
+              "type": "integer"
+            },
+            "required": false
+          },
+          {
+            "in": "query",
             "name": "limit",
             "schema": {
               "default": 30,
@@ -4869,6 +4879,16 @@
                   "type": "null"
                 }
               ]
+            },
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "closed",
+            "schema": {
+              "default": -1,
+              "title": "Closed",
+              "type": "integer"
             },
             "required": false
           },
